0032604: Visualization, AIS_LightSource - improve dragging robustness