src/Select3D/Select3D_SensitiveSphere.hxx
@@ -58,6 +58,12 @@ public:
   //! Returns the position of detected point on the sphere.
   const gp_Pnt& LastDetectedPoint() const { return myLastDetectedPoint; }
 
+  //! Invalidate the position of detected point on the sphere.
+  void ResetLastDetectedPoint()
+  {
+    myLastDetectedPoint = gp_Pnt (RealLast(), RealLast(), RealLast());
+  }
+
 protected:
   gp_Pnt        myCenter;
   gp_Pnt        myLastDetectedPoint;
